--- a/Kompose/app/src/main/res/layout/activity_playlist.xml
+++ b/Kompose/app/src/main/res/layout/activity_playlist.xml
@@ -55,7 +55,7 @@
                     android:layout_alignParentStart="true"
                     android:layout_marginEnd="10sp"
                     android:layout_marginStart="0sp"
-                    android:contentDescription="@string/thumbnail"
+                    android:contentDescription="@string/playlist_thumbnail"
                     android:scaleType="centerCrop"
                     android:src="@{viewModel.sessionModel.currentlyPlaying.thumbnail}"
                     tools:visibility="@{viewModel.sessionModel.isHost ? View.VISIBLE : View.GONE}"
@@ -174,7 +174,7 @@
                     style="@style/SecondaryTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:text="@string/add_more_songs" />
+                    android:text="@string/playlist_flavortext_add_songs" />
 
 
             </LinearLayout>
@@ -209,7 +209,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
                 android:textColor="@color/colorBlack"
-                android:text="@string/add_songs"
+                android:text="@string/playlist_flavortext_tell_others"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintVertical_bias="0.4"
@@ -233,7 +233,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="18sp"
                 android:textColor="@color/colorBlack"
-                android:text="@string/session_finished"
+                android:text="@string/playlist_flavortext_session_finished"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintVertical_bias="0.4" />
