--- a/Kompose/app/src/main/res/layout/fragment_manual.xml
+++ b/Kompose/app/src/main/res/layout/fragment_manual.xml
@@ -22,7 +22,7 @@
             android:layout_marginBottom="12sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/connect_manually" />
+            android:text="@string/main_flavortext_manual_join" />
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
@@ -34,7 +34,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:singleLine="true"
-                android:hint="@string/your_name"
+                android:hint="@string/main_user_name"
                 android:text="@={viewModel.clientName}"
                 android:inputType="textPersonName"
                 android:maxLines="1"
@@ -69,7 +69,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:singleLine="true"
-                        android:hint="@string/ip_address"
+                        android:hint="@string/field_ip_address"
                         android:text="@={viewModel.ipAddress}"
                         android:digits="0123456789."
                         android:inputType="textNoSuggestions"
@@ -99,7 +99,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:singleLine="true"
-                        android:hint="@string/port"
+                        android:hint="@string/field_port_display"
                         android:text="@={viewModel.port}"
                         android:inputType="number"
                         android:maxLines="1"
@@ -118,7 +118,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="@{viewModel.joinManualClicked}"
-            android:text="@string/join_manually" />
+            android:text="@string/main_button_join_manually" />
 
     </LinearLayout>
 
