--- a/Kompose/app/src/main/res/menu/menu_historydetails.xml
+++ b/Kompose/app/src/main/res/menu/menu_historydetails.xml
@@ -5,7 +5,7 @@
     <item
         android:id="@+id/history_toolbar_deletethis"
         android:icon="@drawable/ic_delete_white_36dp"
-        android:title="@string/action_delete"
+        android:title="@string/history_menu_delete"
         app:showAsAction="always"/>
 
 </menu>
